# chair

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  start.ts  vite.config.ts
.direnv/: flake-profile-1-link
rust/: main.rs
rust/tools/: brush.rs  erase.rs  shape.rs
src/: app.d.ts  hooks.server.ts
src/lib/components/: colourPicker.svelte
src/lib/controller/: connection.client.ts  room.server.ts  roomManager.server.ts  tool.svelte.ts  tool.ts
src/lib/model/: room.server.ts  surface.ts  user.server.ts
src/lib/network/: operation.ts  packets.ts  prims.ts
src/lib/server/: websocket.server.ts  websocket.startup.ts
src/lib/useful/: packets.ts  prims.ts
src/lib/util/: canvasDrawHelpers.ts  mouseState.ts  pointerState.ts  stores.ts
src/routes/: +page.server.ts  +page.svelte
src/routes/api/createRoom/: +server.ts
src/routes/api/joinRoom/: +server.ts
src/routes/canvas/[room]/[username]/: +page.server.ts  +page.svelte
src/routes/testing/[room]/: +page.server.ts  +page.svelte
src/routes/testing/[room]/[username]/: +page.svelte
